--- a/OnlineShop/.gitignore
+++ b/OnlineShop/.gitignore
@@ -363,3 +363,8 @@ MigrationBackup/
 FodyWeavers.xsd
 
 OnlineShop/.vs
+OnlineShop/obj
+OnlineShop/bin
+OnlineShop/OnlineShow/obj
+OnlineShop/OnlineShow/bin
+OnlineShop/OnlineShow/.vs
