--- a/.gitignore
+++ b/.gitignore
@@ -372,4 +372,4 @@ OnlineShop/OnlineShow/.vs
 /OnlineShop/OnlineShop/bin/Debug
 /OnlineShop/OnlineShop/obj/Release
 /OnlineShop/OnlineShop/bin/Release
-/OnlineShop/.vs/OnlineShop/v17/.suo
+/OnlineShop/.vs/OnlineShop
