--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,4 @@ OnlineShop/OnlineShow/.vs
 /OnlineShop/OnlineShop/bin/Debug
 /OnlineShop/OnlineShop/obj/Release
 /OnlineShop/OnlineShop/bin/Release
+/OnlineShop/.vs/
