--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Public\images\" />
+    <Folder Include="Public\images\NewFolder\" />
   </ItemGroup>
 
 </Project>
